--- a/app/src/main/res/layout/content_dictionary.xml
+++ b/app/src/main/res/layout/content_dictionary.xml
@@ -8,12 +8,9 @@
     tools:context="com.dictionary.hckhanh.pearsondictionary.DictionaryActivity"
     tools:showIn="@layout/activity_dictionary">
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.view.ViewPager
+        android:id="@+id/dict_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
