--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -23,8 +23,7 @@
         <android.support.design.widget.TabLayout
             android:id="@+id/sliding_tab"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:tabMode="scrollable" />
+            android:layout_height="match_parent" />
 
     </android.support.design.widget.AppBarLayout>
 
