--- a/app/src/main/res/layout/fragment_meaning.xml
+++ b/app/src/main/res/layout/fragment_meaning.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/word_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="123123123" />
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
