--- a/app/src/main/res/layout/layout_word.xml
+++ b/app/src/main/res/layout/layout_word.xml
@@ -12,31 +12,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="record"
+            android:id="@+id/word_text"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/pronunciation_text"
             android:text="rɪˈkɔːd (noun)" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="to write information down or store it in a computer or on film so that it can be looked at in the future"
-            android:layout_marginTop="8dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Example:"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginTop="16dp" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:lineSpacingExtra="8dp"
-            android:text="Her husband made her record every penny she spent.\nHe recorded that the operation was successful."
+            android:id="@+id/content_text"
+            android:text="to write information down or store it in a computer or on film so that it can be looked at in the future\nHer husband made her record every penny she spent.\nHe recorded that the operation was successful."
             android:layout_marginTop="8dp" />
 
     </LinearLayout>
