--- a/app/src/main/res/layout/fragment_meaning.xml
+++ b/app/src/main/res/layout/fragment_meaning.xml
@@ -7,6 +7,18 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/word_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingLeft="8dp"
+        android:paddingTop="8dp"
+        android:paddingRight="8dp" />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progress_bar"
+        android:visibility="invisible"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="false" />
 
 </RelativeLayout>
