--- a/app/src/main/res/layout/layout_word.xml
+++ b/app/src/main/res/layout/layout_word.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_marginBottom="8dp"
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -19,7 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/pronunciation_text"
-            android:text="rɪˈkɔːd (noun)" />
+            android:text="rɪˈkɔːd (noun)"
+            android:textSize="16sp" />
 
         <TextView
             android:layout_width="wrap_content"
