--- a/app/src/main/res/menu/menu_dictionary.xml
+++ b/app/src/main/res/menu/menu_dictionary.xml
@@ -2,9 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.dictionary.hckhanh.pearsondictionary.DictionaryActivity">
-    <item android:id="@+id/search"
-        android:title="@string/search_title"
-        android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
+  <item
+      android:id="@+id/search"
+      android:icon="@android:drawable/ic_menu_search"
+      android:title="@string/search_title"
+      app:actionViewClass="android.support.v7.widget.SearchView"
+      app:showAsAction="collapseActionView|ifRoom"/>
 </menu>
