--- a/app/src/main/res/layout/fragment_meaning.xml
+++ b/app/src/main/res/layout/fragment_meaning.xml
@@ -19,8 +19,7 @@
       android:layout_height="wrap_content"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
-      android:indeterminate="false"
-      android:visibility="invisible"
+      android:indeterminate="true"
       />
 
 </RelativeLayout>
