--- a/app/src/main/res/layout/layout_word.xml
+++ b/app/src/main/res/layout/layout_word.xml
@@ -3,6 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
+    android:clickable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     >
 
   <LinearLayout
