--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.dictionary.hckhanh.pearsondictionary.DictionaryActivity"
+    tools:context="com.hckhanh.pearson.dict.DictionaryActivity"
     >
 
   <android.support.design.widget.AppBarLayout
